# agentic-decision-benchmark

./: .env.example  .gitignore  README.md  SYSTEM_EXPLAINED.md  pyproject.toml
config/: agents.yaml  benchmark.yaml  evaluator_rubric.yaml  model.yaml
data/: candidate_strategies.yaml  eurotech_case.md  private_role_briefs.yaml
src/agentic_decision_benchmark/: __init__.py  main.py  prompts.py  schemas.py  settings.py  state.py
src/agentic_decision_benchmark/agents/: __init__.py  base.py  registry.py
src/agentic_decision_benchmark/consensus/: __init__.py  mcda.py
src/agentic_decision_benchmark/evaluation/: __init__.py  evaluator.py  metrics.py
src/agentic_decision_benchmark/graphs/: __init__.py  common_nodes.py  self_organizing_graph.py  single_graph.py  supervisor_graph.py
src/agentic_decision_benchmark/llm/: __init__.py  base.py  factory.py  mock.py  ollama.py  openai.py
src/agentic_decision_benchmark/self_organization/: __init__.py  conflict_map.py  convergence.py  salience.py
src/agentic_decision_benchmark/storage/: __init__.py  report_writer.py  run_store.py
src/agentic_decision_benchmark/utils/: json_utils.py
tests/: test_blackboard.py  test_cli.py  test_conflict_map.py  test_consensus.py  test_convergence.py  test_evaluator.py  test_graph_smoke.py  test_mock_strategy_context.py  test_private_role_briefs.py  test_prompt_visibility.py  test_provider.py  test_report_writer.py  test_salience.py  test_state.py
